# EGXPhys

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
EGXPhys/: EGXPhys.hpp  EGXPhys.hpp.gch  EGXPhysConstants.hpp  EGXPhysConstants.hpp.gch  documentText.cpp
EGXPhys/Acoustics/: Acoustics.hpp  AcousticsConstants.hpp
EGXPhys/Astrophysics/: AbsoluteMagnitude.hpp  AbsoluteMagnitude.inl  Apoapsis.hpp  Apoapsis.inl  Astrophysics.hpp  AstrophysicsConstants.hpp  B-VColor.hpp  B-VColor.inl  BVColor.hpp  BVColor.inl  BolometricCorrection.hpp  BolometricCorrection.inl  CircumstellarHabitableZone.hpp  CircumstellarHabitableZone.inl  ColorTemperature.hpp  ColorTemperature.inl  Declination.hpp  Declination.inl  Eccentricity.hpp  Eccentricity.inl  EscapeVelocity.hpp  EscapeVelocity.inl  HabitableZoneAtmosphere.hpp  HabitableZoneAtmosphere.inl  HabitableZoneComposition.hpp  HabitableZoneComposition.inl  Luminosity - Copy.inl  Luminosity.hpp  Luminosity.inl  OrbitalCharecteristics.hpp  OrbitalCharecteristics.inl  OrbitalPeriod.hpp  OrbitalPeriod.inl  Parallax.hpp  Parallax.inl  Periapsis.hpp  Periapsis.inl  PlanetCriteria.hpp  PlanetCriteria.inl  PlanetaryEquilibriumTempreture.hpp  (+34 more)
EGXPhys/Atomic/: Atomic.hpp  AtomicConstants.hpp  DecayConstant.hpp  DecayConstant.inl  DecayWidth.hpp  DecayWidth.inl  HalfLife.hpp  HalfLife.inl  MassDefect.hpp  MassDefect.inl  MassExcess.hpp  MassExcess.inl  MeanLifetime.hpp  MeanLifetime.inl  NuclearBindingEnergy.hpp  NuclearBindingEnergy.inl  NuclearSeparationEnergy.hpp  NuclearSeparationEnergy.inl  QValue.hpp  QValue.inl  RadioactiveDecay - Copy.hpp  RadioactiveDecay - Copy.inl  (+4 more)
doc/: Doxyfile
docs/: Doxyfile
tests/: Makefile.win  unitTest.cpp  unitTest.dev  unitTest.layout
(+6462 files in other folders)
